2009-04-11  Dan Winship  <danw@gnome.org>

	Bug 578645 – crash in Rhythmbox Music Player

	* libsoup/soup-proxy-resolver-gnome.c
	(soup_proxy_resolver_gnome_init): unlock id.lock before freeing
	it. (Fixes the case where SoupProxyResolverGNOME is first
	initialized from a thread other than the main thread, while the
	default main loop is running.)

2009-04-08  Dan Winship  <danw@gnome.org>

	* configure.in: 2.26.0.9, aka "I can't believe it's not 2.26.1!",
	a pre-release to give the proxy resolver fix a bit of extra
	testing before next week.

	* NEWS: Update

2009-04-08  Dan Winship  <danw@gnome.org>

	Re-fix GNOME proxy resolution (qv bug 571527)

	* libsoup/soup-proxy-resolver-gnome.c: New and improved GNOME
	proxy resolver; gets information out of GConf in a thread-safe
	manner, and then passes it on to libproxy via environment
	variables, so that libproxy won't try to access GConf itself, but
	we still can use it for PAC, WPAD, and ignore_hosts.

	* libsoup/soup-proxy-resolver-gconf.c:
	* libsoup/soup-proxy-resolver-libproxy.c: gone now

	* libsoup/soup-gnome-features.c: update for the fact that
	SoupProxyResolverGNOME is actually a real type now, not
	compile-time-defined alias

2009-04-08  Dan Winship  <danw@gnome.org>

	Fix ISO 8601 parsing to accept either "." or ","

	* libsoup/soup-date.c (parse_iso8601_date): accept either "." or
	"," as decimal separator, per the spec. qv glib bug 578369.

2009-04-05  Dan Winship  <danw@gnome.org>

	Don't allow CR/LF in header names or values

	* libsoup/soup-message-headers.c (soup_message_headers_append):
	Don't let the caller create a header with whitespace or ":" in its
	name, or with CR or LF in its value, since that would result in us
	generating syntactically invalid headers.

2009-04-03  Dan Winship  <danw@gnome.org>

	Bug 577386 – Fails to handle HTTPS redirect from a certain site.

	* libsoup/soup-gnutls.c (soup_gnutls_read): Treat abnormal
	EOFs as though they were normal, rather than as errors. Shrug.
